--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.2",
+    "js-cookie": "^3.0.5",
     "mapbox-gl": "^2.15.0",
     "rc-progress": "^3.4.2",
     "react": "^18.2.0",
